fix gap property

--- a/styles/make-reservation.css
+++ b/styles/make-reservation.css
@@ -5,7 +5,7 @@
   color: #343434;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 2em;
+  gap: 1.5em;
   padding: 2em;
 }
 
@@ -22,8 +22,7 @@
 
 .make-reservation-form input,
 .make-reservation-form select {
-  width: 100%;
-  padding: 0.75rem;
+  padding: 0.7rem;
 }
 
 .localization-section,
@@ -31,7 +30,7 @@
 .date-to-section {
   display: flex;
   flex-direction: column;
-  gap: 1em;
+  gap: 0.5em;
 }
 
 .make-reservation-title {
@@ -60,7 +59,7 @@
 }
 
 .make-reservation-submit {
-  border: 1px solid #274c77;
+  border: none;
   background-color: #274c77;
   color: #fdfffc;
   border-radius: 10px;
